# toshl-manager

./: .env.example  .gitignore  LICENSE  Makefile  README.md  application.py  config.py  docker-compose.yml  init.sh  pyproject.toml  pytest.ini
.github/workflows/: main.yml  master.yml  push.yml  run-tests.yml
application/cli/: __init__.py  budgets.py  loans.py  roomie_expenses.py
application/telegram/: __init__.py  budgets.py  interfaces.py  loands.py  roomie_expenses.py  utils.py
config/: __init__.py
core/: repositories.py
core/budgets/: repositories.py
core/categories/: dtos.py  repositories.py
core/entries/: repositories.py
core/tags/: dtos.py  repositories.py
docker/local/: Dockerfile  docker-compose.yml
docker/prod/: Dockerfile  docker-compose.yml
docker/test/: Dockerfile  docker-compose.yml
libs/: date.py  text_to_image.py
libs/bots/: utils.py
libs/calculators/: total_dict.py
libs/formatters/: __init__.py  csv.py  interface.py  table.py  utils.py
libs/outputs/: __init__.py  file.py
libs/tests/: test_date.py
libs/tosh_finances/: client.py  endpoints.py  errors.py
requirements/: base.txt  local.txt  test.txt
services/: text_to_image.py
services/formaters/: csv.py
services/formatters/: csv.py  interface.py  table.py
services/outputs/: interface.py  terminal.py
services/toshl_finances/: client.py  errors.py  repository_interface.py  toshl_app.py  utils.py
src/budgets/: dtos.py  repositories.py  serializers.py  value_objects.py
src/categories/: dtos.py  (+1 more)
tests/: test_toshl_manager.py
toshl_manager/: commands.py
(+48 files in other folders)
